# techlandscape

./: .gitignore  404.html  README.md  config.sample.json  dvc.yaml  example.py  expand.py  index.html  infer.py  mkdocs.yml  poetry.lock.old  prune.py  pyproject.toml  sitemap.xml
.dvc/: config
API_ANTISEED/: index.html
API_ASSETS/: index.html
API_CANDIDATES/: index.html
API_EXPANSION/: index.html
API_IO/: index.html
API_MODEL/: index.html
API_MODELARCHITECTURES/: index.html
API_ROBUSTNESS/: index.html
LICENSE_CODE/: index.html
LICENSE_DATA/: index.html
MODELS_PERFORMANCE/: index.html
RECIPE/: index.html
ROBUSTNESS_EXPANSION/: index.html
ROBUSTNESS_MODEL/: index.html
configs/: candidate_blockchain.yaml  candidates_additivemanufacturing.yaml  candidates_blockchain.yaml  candidates_computervision.yaml  candidates_culturedmeat.yaml  candidates_genomeediting.yaml  candidates_hydrogenstorage.yaml  candidates_naturallanguageprocessing.yaml  candidates_selfdrivingvehicle.yaml  model_cnn.yaml  model_cnn_sm.yaml  model_mlp.yaml  seed_additivemanufacturing.yaml  seed_computervision.yaml  seed_culturedmeat.yaml  seed_selfdrivingvehicle.yaml
data/: .gitignore  candidates_additivemanufacturing_sample.jsonl.dvc  candidates_blockchain_sample.jsonl.dvc  candidates_computervision_sample.jsonl.dvc  candidates_culturedmeat_sample.jsonl.dvc  candidates_genomeediting_sample.jsonl.dvc  candidates_hydrogenstorage_sample.jsonl.dvc  candidates_naturallanguageprocessing_sample.jsonl.dvc  candidates_selfdrivingvehicle_sample.jsonl.dvc  expansion_additivemanufacturing_sample.jsonl.dvc  expansion_blockchain_sample.jsonl.dvc  expansion_computervision_sample.jsonl.dvc  expansion_genomeediting_sample.jsonl.dvc  expansion_hydrogenstorage_sample.jsonl.dvc  expansion_naturallanguageprocessing_sample.jsonl.dvc  expansion_selfdrivingvehicle_sample.jsonl.dvc  seed_additivemanufacturing.jsonl.dvc  seed_blockchain.jsonl.dvc  seed_computervision.jsonl.dvc  seed_genomeediting.jsonl.dvc  seed_hydrogenstorage.jsonl.dvc  seed_naturallanguageprocessing.jsonl.dvc  seed_selfdrivingvehicle.jsonl.dvc  test_additivemanufacturing.jsonl.dvc  test_additivemanufacturing_CoeB3.jsonl.dvc  test_additivemanufacturing_Ieh6u.jsonl.dvc  test_additivemanufacturing_Rie5o.jsonl.dvc  test_additivemanufacturing_Yei1E.jsonl.dvc  test_additivemanufacturing_ahQu4.jsonl.dvc  test_additivemanufacturing_cohM6.jsonl.dvc  test_additivemanufacturing_eiM5m.jsonl.dvc  test_additivemanufacturing_eip3O.jsonl.dvc  test_additivemanufacturing_nal1V.jsonl.dvc  test_additivemanufacturing_ox9eV.jsonl.dvc  (+138 more)
depr/: infer.py  (+2 more)
(+350 files in other folders)
