[tool.poetry]
name = "TechLandscape"
version = "0.1.0"
description = ""
authors = ["Cyril Verluise <cyril.verluise@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^1.14"
google-cloud = "^0.34.0"
google-cloud-storage = "^1.19"
google-cloud-bigquery = "^1.19"
numpy = "^1.17"
pandas = "^0.25.1"
scipy = "^1.3"
scikit-learn = "^0.21.3"
jupyter = "^1.0"
pre-commit = "^1.18"
click = "^7.0"
wasabi = "^0.2.2"
pyarrow = "^0.14.1"
tqdm = "^4.36"
keras = "^2.3"
matplotlib = "^3.1"
plotly = "^4.2"
psutil = "^5.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^1.18"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

