[tool.poetry]
name = "TechLandscape"
version = "0.1.0"
description = ""
authors = ["Cyril Verluise <cyril.verluise@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud = "^0.34.0"
google-cloud-bigquery = "^1.27.2"
pandas = "^1.2.2"
scipy = "^1.6.1"
scikit-learn = "^0.24.1"
click = "^7.1.2"
pyarrow = "^3.0.0"
keras = "^2.4.3"
decorator = "^4.4.2"
numpy = ">=1.19.2,<1.20.0"
tensorflow = "^2.4.1"
spacy = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^1.18"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

